# Wazuh

./: .gitignore  README.md  app.py  crew.py  dashboard.py  main-wazuh-integration.py  main.py  pyproject.toml  verify_tool_exe.py  verify_tool_execution.py  wazuh_api.py
config/: agents.yaml  tasks.yaml
config/loki/: loki-config.yaml
config/prometheus/: prometheus.yml
config/promtail/: promtail-config.yaml
docker compose/: ai-services.yml  integrated-stack.yml  monitoring-stack.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  MONITORING.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
services/alert-triage/: Dockerfile  PRODUCTION_READINESS.md  README.md  alert-triage-compose.yml  config.py  llm_client.py  main.py  ml_client.py  models.py  pytest.ini  requirements.txt
services/common/: __init__.py  auth.py  integration.py  logging_config.py  metrics.py  ollama_client.py  pipeline.py  rate_limit.py  security.py
services/ml_training/: DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.production  PRODUCTION_READINESS_ASSESSMENT.md  README.md  TRAINING_REPORT.md  docker-compose.inference.yml  inference_api.py  requirements.txt  test_inference_api.py  train_ids_model.py  verify_deployment.py
services/rag-service/: DEPLOYMENT.md  (+11 more)
test/: ml.py  sql_db_test.py  test_crewai_investigation.py  test_siem_connection.py  test_siem_tool.py  test_wazuh_integration.py
tools/: __init__.py  abuseipdb_tool.py  alert_triage_tool.py  ml_inference_tool.py  rag_tool.py  virustotal_tool.py  wazuh_siem_tool.py  yeti_tool.py
utils/: alert_storage.py  db_path.py  pdf_generator.py
(+21 files in other folders)
