[project]
name = "ip-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "blinker",
    "chromadb>=1.0.0",
    "colorama>=0.4.6",
    "crewai>=1.7.1",
    "crewai-tools>=1.7.1",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "numpy>=1.22.4,<2.0",
    "pandas==2.2.3",
    "plotly>=6.5.1",
    "prometheus-client==0.21.0",
    "pydantic>=2.11.9,<2.12",
    "pydantic-settings>=2.10.1,<2.11",
    "pyfiglet>=1.0.4",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "python-dotenv>=1.1.1,<1.2",
    "python-json-logger==2.0.7",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.6",
    "requests>=2.32.5,<3.0",
    "sentence-transformers==3.3.1",
    "streamlit>=1.52.2",
    "torch==2.5.1",
    "utils>=1.0.2",
    "uvicorn[standard]>=0.31.1,<0.32",
]
